# autosvc

./: AGENTS.md  README.md  pyproject.toml  roadmap.md
autosvc/: __init__.py  backups.py  config.py  logging.py  runlog.py  unsafe.py
autosvc/apps/: cli.py  daemon.py  tui.py
autosvc/core/: __init__.py  service.py
autosvc/emulator/: ecu_sim.py
autosvc/ipc/: __init__.py  protocol.py  unix_client.py  unix_server.py
backend/: main.py
backend/brands/: base.py  generic.py  vag.py
backend/dtc/: decode.py  format.py  registry.py  status.py
backend/golden/: runner.py
backend/protocol/: handlers.py  server.py
backend/transport/: base.py  isotp.py  mock.py  recorder.py  replay.py  socketcan.py
backend/uds/: client.py  dtc.py
backend/vehicle/: scan.py
datasets/vag/: manifest.json
docs/: ARCHITECTURE.md  AUDIT.md  EMULATOR.md  STATUS.md
docs/manual/: ADAPTATIONS.md  COMMON_PROBLEMS.md  DISCOVERY.md  DTC.md  EMULATOR.md  FIRST_DIAG.md  LIMITATIONS.md  LIVE_DATA.md  LONG_CODING.md  README.md  SECURITY_ACCESS.md  SETUP.md
fixtures/goldens/: adapt_list_09.json  adapt_read_09_ccwr_after.json  adapt_read_09_ccwr_before.json  adapt_read_09_ccwr_restored.json  adapt_revert_000001.json  adapt_write_09_ccwr_true.json  adapt_write_09_security_fail.json  adapt_write_09_security_ok.json  coding_list_09.json  coding_read_09_auto_lock_after.json  coding_read_09_auto_lock_before.json  coding_revert_000002.json  coding_write_09_auto_lock_true.json  coding_write_09_security_fail.json  did_read_f190.json  (+14 more)
tools/: autotest.sh  run_emulator.sh  vcan.sh
tui/: main.py
(+52 files in other folders)
